# smart

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  createArgosConfig.tsx  create_map.py  empty-8-8.scen  example_paths.txt  example_paths_xy.txt  example_paths_yx.txt  index.ts  jsx.d.ts  package.json  parse.ts  run.ts  run_sim.py  scen_1_paths-500.txt  scen_1_paths.txt  test.map  test.scen  test_paths.txt  warehouse_random_1_1000_paths_yx.txt  warehouse_random_1_500_paths_yx.txt
ArgosConfig/: ToArgos.py  __init__.py
client/: CMakeLists.txt
client/controllers/: CMakeLists.txt
client/controllers/footbot_diffusion/: CMakeLists.txt  footbot_diffusion.cpp  footbot_diffusion.h
client/controllers/footbot_manualcontrol/: footbot_manualcontrol.cpp  footbot_manualcontrol.h
client/controllers/footbot_nn/: footbot_nn_controller.cpp  footbot_nn_controller.h
client/controllers/footbot_nn/nn/: ctrnn_multilayer.cpp  neural_network.cpp  perceptron.cpp
client/embedding/galib/: CMakeLists.txt  main.cpp
client/embedding/mpga/: CMakeLists.txt  main.cpp
client/experiments/: diffusion_1.argos
client/loop_functions/: CMakeLists.txt
client/loop_functions/logger_loop_functions/: CMakeLists.txt  LoggerLoopFunctions.cpp  LoggerLoopFunctions.h
client/loop_functions/mpga_loop_functions/: CMakeLists.txt  mpga.cpp  mpga.h  mpga_loop_functions.cpp  mpga_loop_functions.h  mpga_phototaxis_loop_functions.cpp  mpga_phototaxis_loop_functions.h
plugins/visualizers/external_visualizer/: CMakeLists.txt  ExternalVisualizer.cpp  ExternalVisualizer.h  log.h
server/: CMakeLists.txt
server/inc/: ADG.h  ADG_server.h  parser.h
server/src/: ADG.cpp  ADG.h  ADG_server.cpp  ADG_server.h  log.h  parser.cpp  parser.h
